<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="general">General</string>
    <string name="other">Other</string>
    <string name="calibrate">Calibrate</string>
...
    <string name="notSupported">Not Supported</string>
    <string name="cameraBusy">Camera Busy</string>
    <string name="analyze">Analyse</string>
    <!-- Tests -->
    <string name="aluminum">.</string>
    <string name="arsenic_iii">.</string>
    <string name="chromium">.</string>
    <string name="copper">.</string>
    <string name="dissolved_oxygen">.</string>
    <string name="fluoride">.</string>
    <string name="fluoride_high_range">.</string>
    <string name="free_chlorine">.</string>
    <string name="hydrogen_peroxide">.</string>
...
    <!--Result Screen-->
    <string name="acceptResult">Accept Result</string>
    <string name="highLevelsFound">High level of contamination</string>
    <string name="tryWithDilutedSample" tools:ignore="PluralsCandidate">Try again with %1$d times dilution</string>

    <!--Alerts-->
    <string name="cannotStartTest">Cannot start test</string>
    <string name="errorTestNotAvailable">Requested test is not available</string>
    <string name="pleaseContactSupport">Please contact technical support</string>

    <!--Permission-->
    <string name="cameraPermissions">Camera permissions are required</string>
    <string name="cameraAndLocationPermissions">Camera &amp; location permissions are required</string>
...
